--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>olgenn</title>
-	<link rel="stylesheet" type="text/css" href="test.css">
+	<title>LOREM IPSUM NEWS</title>
+	<link rel="stylesheet" type="text/css" href="styles/test.css">
+	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Serif:700' rel='stylesheet' type='text/css'>
 	<script>
 
 	</script>
@@ -14,25 +16,18 @@
 	</style>
 </head>
 <body>
-	<header class="page-header">
-		<nav class="user-navigation">
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Staff pick</a></li>
-				<li><a href="#">How to</a></li>
+	<div class="b-page-wrapper">
+		<span class="page-label">LOREM IPSUM NEWS</span>
+		<a href="#" class="log-in">Войти</a>
+		<header class="b-page-header">
+			<h1 class="page-head">Новости</h1>
+			
+			<ul class="page-title-items">
+				<li class="page-title-item">скандалы</li>
+				<li class="page-title-item">интриги</li>
+				<li class="page-title-item">расследования</li>
 			</ul>
-			<div class="user-panel">
-				
-			</div>
-		</nav>
-		<div class="page-logo"><a href="/"><img src="/image/1.png" alt=""></a></div>
-
-		<form action="#">
-			<label for="search">Search</label>
-			<input type="search" id="search"/>
-			<input type="submit" value="Отправить">
-		</form>
-	</header>
+		</header>
+	</div>	
 </body>
 </html>
