--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -59,6 +59,11 @@
 					</div>
 				</div>
 		</div>
+		<footer class="b-page-footer">
+			<div class="copyright">
+				© ЗАО «Лорем ипсум ньюс»
+			</div>
+		</footer>
 	</div>	
 </body>
 </html>
