--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -5,7 +5,7 @@
 	<title>LOREM IPSUM NEWS</title>
 	<link rel="stylesheet" type="text/css" href="styles/test.css">
 	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700|PT+Serif:700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|PT+Serif:700' rel='stylesheet' type='ext/css'>
 	<script>
 
 	</script>
@@ -32,6 +32,7 @@
 		</header>
 		<div class="b-page-content clearfix">
 				<div class="news-item clearfix">
+					<div class="b-genre-label scandal">Скандал</div>
 					<img src="images/news-image-1.jpg" class="news-item-image" alt="news-image-1.png">
 					<div class="news-item-content">
 						<h2 class="news-item-header">Страны Евросоюза могут ввести санкции против Google</h2>
@@ -41,6 +42,7 @@
 					</div>
 				</div>
 				<div class="news-item clearfix">
+					<div class="b-genre-label intrigue">Интрига</div>
 					<img src="images/news-image-2.jpg" class="news-item-image" alt="news-image-2.png">
 					<div class="news-item-content">
 						<h2 class="news-item-header">ФАС уличила ВГТРК в рекламе алкоголя при трансляции футбольного матча</h2>
@@ -50,6 +52,7 @@
 					</div>
 				</div>
 				<div class="news-item clearfix">
+					<div class="b-genre-label investigation">Расследование</div>
 					<img src="images/news-image-3.jpg" class="news-item-image" alt="news-image-3.png">
 					<div class="news-item-content">
 						<h2 class="news-item-header">Возобновление борьбы за домены в зоне .рф маловероятно, считают юристы</h2>
