add login windows

--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -6,14 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="styles/test.css">
 	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|PT+Serif:700' rel='stylesheet' type='ext/css'>
-	<script>
-
-	</script>
-	<style type="text/css">
-		input {
-			border-radius: 10px;
-		}
-	</style>
 </head>
 <body>
 	<div class="b-page-wrapper">
@@ -67,6 +59,18 @@
 				© ЗАО «Лорем ипсум ньюс»
 			</div>
 		</footer>
+		<div class="b-login-layer">
+			<div class="login-window">
+				<form action="#" id="login-form">
+					<input type="text" class="login-input" placeholder="Логин">
+					<input type="password" class="login-input" placeholder="Пароль">
+					<div class="login-buttons">	
+						<input type="submit" value="Войти">
+						<a href="#" class="log-in">Отмена</a>
+					</div>
+				</form>
+			</div>
+		</div>
 	</div>	
 </body>
 </html>
