--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -45,7 +45,7 @@
 					<div class="b-genre-label scandal">Скандал</div>
 					<img src="images/news-image-1.jpg" class="news-item-image" alt="news-image-1.png">
 					<div class="news-item-content">
-						<h2 class="news-item-header">Страны Евросоюза могут ввести санкции против Google</h2>
+						<h2 class="news-item-header"><a href="#">Страны Евросоюза могут ввести санкции против Google</a></h2>
 						<p class="news-item-description">
 							Европейские власти обеспокоены политикой конфиденциальности компании Google. Google хранит личные данные пользователей в одном профиле, в котором может объединяться информация с нескольких десятков разных сайтов.
 						</p>	
@@ -55,7 +55,7 @@
 					<div class="b-genre-label intrigue">Интрига</div>
 					<img src="images/news-image-2.jpg" class="news-item-image" alt="news-image-2.png">
 					<div class="news-item-content">
-						<h2 class="news-item-header">ФАС уличила ВГТРК в рекламе алкоголя при трансляции футбольного матча</h2>
+						<h2 class="news-item-header"><a href="#">ФАС уличила ВГТРК в рекламе алкоголя при трансляции футбольного матча</a></h2>
 						<p class="news-item-description">
 							Проверка фотографий и видео-записей показала, что на рекламных стендах стадиона "Стэмфорд Бридж" во время указанного матча не были размещены рекламные плакаты данных производителей алкогольной продукции. Рассмотрение данного дела ФАС России назначил на 15 мая 2013 года.
 						</p>		
@@ -65,7 +65,7 @@
 					<div class="b-genre-label investigation">Расследование</div>
 					<img src="images/news-image-3.jpg" class="news-item-image" alt="news-image-3.png">
 					<div class="news-item-content">
-						<h2 class="news-item-header">Возобновление борьбы за домены в зоне .рф маловероятно, считают юристы</h2>
+						<h2 class="news-item-header"><a href="#">Возобновление борьбы за домены в зоне .рф маловероятно, считают юристы</a></h2>
 						<p class="news-item-description">
 							По всем 70914 доменным именам поступили заявки от клиентов, желающих их приобрести в указанном порядке", - говорится в тексте судебного решения от 16 ноября 2011 г. Апелляционная инстанция частично удовлетворила иск ФАС, а кассационная передала дело на рассмотрение в президиум ВАС.
 						</p>
