--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -26,7 +26,7 @@
 		<span class="page-label">
 			LOREM IPSUM NEWS
 		</span>
-		<span href="#" class="log-in" onclick="document.getElementById('b-login').style.display='block';document.getElementById('b-page-wrapper').className = 'b-page-wrapper login';">
+		<span class="log-in" onclick="document.getElementById('b-login').style.display='block';document.getElementById('b-page-wrapper').className = 'b-page-wrapper login';">
 			Войти
 		</span>
 		<header class="b-page-header">
