--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -15,9 +15,9 @@
 					<input type="password" class="login-input" placeholder="Пароль">
 					<div class="login-buttons">	
 						<input type="submit" value="Войти">
-						<span class="log-in-cancel"  onclick="document.getElementById('b-login').style.display='none';document.getElementById('b-page-wrapper').className = 'b-page-wrapper';">
+						<a href=# class="log-in-cancel"  onclick="document.getElementById('b-login').style.display='none';document.getElementById('b-page-wrapper').className = 'b-page-wrapper';">
 							Отмена
-						</span>
+						</a>
 					</div>
 				</form>
 			</div>
@@ -26,9 +26,9 @@
 		<span class="page-label">
 			LOREM IPSUM NEWS
 		</span>
-		<span class="log-in" onclick="document.getElementById('b-login').style.display='block';document.getElementById('b-page-wrapper').className = 'b-page-wrapper login';">
+		<a href="#" class="log-in" onclick="document.getElementById('b-login').style.display='block';document.getElementById('b-page-wrapper').className = 'b-page-wrapper login';">
 			Войти
-		</span>
+		</a>
 		<header class="b-page-header">
 			<h1 class="page-head">Новости</h1>
 			
