added fonts, create news page

--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
 	<link rel="stylesheet" type="text/css" href="styles/test.css">
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|PT+Serif:700' rel='stylesheet' type='ext/css'>
+	<script type="text/javascript" src="js/scripts.js"></script>
 </head>
 <body>
 	<div class="b-login-layer" id="b-login">
@@ -41,11 +42,12 @@
 			</div>
 		</header>
 		<div class="b-page-content clearfix">
+			<article class="news-items">
 				<div class="news-item clearfix">
 					<div class="b-genre-label scandal">Скандал</div>
 					<img src="images/news-image-1.jpg" class="news-item-image" alt="news-image-1.png">
 					<div class="news-item-content">
-						<h2 class="news-item-header"><a href="#">Страны Евросоюза могут ввести санкции против Google</a></h2>
+						<h2 class="news-item-header"><a href="news.html">Страны Евросоюза могут ввести санкции против Google</a></h2>
 						<p class="news-item-description">
 							Европейские власти обеспокоены политикой конфиденциальности компании Google. Google хранит личные данные пользователей в одном профиле, в котором может объединяться информация с нескольких десятков разных сайтов.
 						</p>	
@@ -71,6 +73,7 @@
 						</p>
 					</div>
 				</div>
+			</article>
 		</div>
 		<footer class="b-page-footer">
 			<div class="copyright">
