add user menu, styleв old news

--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -76,9 +76,9 @@
 			</article>
 		</div>
 		<footer class="b-page-footer">
-			<div class="copyright">
+			<p class="copyright">
 				© ЗАО «Лорем ипсум ньюс»
-			</div>
+			</p>
 		</footer>
 	</div>	
 </body>
