--- a/homework/hw_1/news.html
+++ b/homework/hw_1/news.html
@@ -13,6 +13,14 @@
 		<a href='index.html' class="page-label">
 			LOREM IPSUM NEWS
 		</a>
+		<div class="user-menu">
+			<span class="user-name"><span class="arrow">&#9660;</span> Oleg Vavilov</span>
+			<ul class="user-menu-items">
+				<li class="user-menu-item"><a href="#">Профиль</a></li>
+				<li class="user-menu-item"><a href="#">Сообщения</a></li>
+				<li class="user-menu-item"><a href="#">Выход</a></li>
+			</ul>
+		</div>
 		<nav class="b-page-navigation">
 			<ul class="navigation-items">
 				<li class="navigation-item active"><a href="#">Интернет</a></li>
@@ -24,7 +32,7 @@
 		<div class="b-page-content">
 			<article class="news-article clearfix">
 				<aside class="news-note">
-
+					<img class="news-note-image" src="images/google-logo.png" alt="news image">
 
 					Поисковая система Google была создана в&nbsp;качестве учебного проекта студентов Стэнфордского университета Ларри Пейджа и&nbsp;Сергея Брина. Они в&nbsp;1996 году работали над поисковой системой BackRub, а&nbsp;в&nbsp;1998 году на&nbsp;её&nbsp;основе создали новую поисковую систему Google.
 
@@ -44,16 +52,33 @@
 					</div>
 				</div>
 			</article>
-			<section class="old-news clearfix">
-				<header class="old-news-header">
+			<section class="other-news clearfix">
+				<header class="other-news-header">
 					Другие материалы рубрики
 				</header>
+				<ul class="other-news-items">
+					<li class="other-news-item">
+						<a href="#"><img src="images/news-image-4.jpg" alt="news image"></a>
+						<a href="#" class="other-news-link">Охота на вимпа</a>
+						<p class="other-news-prewiev">Опубликованы первые результаты эксперимента по поиску темной материи на МКС</p>
+					</li>
+					<li class="other-news-item">
+						<a href="#"><img src="images/news-image-5.jpg" alt="news image"></a>
+						<a href="#" class="other-news-link">Дешево и очень сердито</a>
+						<p class="other-news-prewiev">США отправят в Персидский залив боевой лазер</p>
+					</li>
+					<li class="other-news-item">
+						<a href="#"><img src="images/news-image-6.jpg" alt="news image"></a>
+						<a href="#" class="other-news-link">Запах большой химии</a>
+						<p class="other-news-prewiev">Россия выбилась из графика уничтожения химоружия</p>
+					</li>
+				</ul>
 			</section>
 		</div>
 		<footer class="b-page-footer">
-			<div class="copyright">
+			<p class="copyright">
 				© ЗАО «Лорем ипсум ньюс»
-			</div>
+			</p>
 		</footer>
 	</div>	
 </body>
