--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -5,8 +5,6 @@
 	<title>LOREM IPSUM NEWS</title>
 	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
 	<link rel="stylesheet" type="text/css" href="styles/test.css">
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|PT+Serif:700' rel='stylesheet' type='ext/css'>
-	<script type="text/javascript" src="js/scripts.js"></script>
 </head>
 <body>
 	<div class="b-login-layer" id="b-login">
@@ -16,7 +14,7 @@
 					<input type="password" class="login-input" placeholder="Пароль">
 					<div class="login-buttons">	
 						<input type="submit" value="Войти">
-						<a href=# class="log-in-cancel"  onclick="document.getElementById('b-login').style.display='none';document.getElementById('b-page-wrapper').className = 'b-page-wrapper';">
+						<a href=# class="log-in-cancel" id="login-cancel-button"  onclick="">
 							Отмена
 						</a>
 					</div>
@@ -27,7 +25,7 @@
 		<span class="page-label">
 			LOREM IPSUM NEWS
 		</span>
-		<a href="#" class="log-in" onclick="document.getElementById('b-login').style.display='block';document.getElementById('b-page-wrapper').className = 'b-page-wrapper login';">
+		<a href="#" class="log-in" id="login-button" onclick="">
 			Войти
 		</a>
 		<header class="b-page-header">
@@ -80,6 +78,7 @@
 				© ЗАО «Лорем ипсум ньюс»
 			</p>
 		</footer>
-	</div>	
+	</div>
+<script type="text/javascript" src="js/script.js"></script>	
 </body>
 </html>
