--- a/homework/hw_1/news.html
+++ b/homework/hw_1/news.html
@@ -5,8 +5,7 @@
 	<title>LOREM IPSUM NEWS</title>
 	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
 	<link rel="stylesheet" type="text/css" href="styles/test.css">
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|PT+Serif:700' rel='stylesheet' type='ext/css'>
-	<script type="text/javascript" src="js/scripts.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 	<div class="b-page-wrapper" id="b-page-wrapper">
