--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -14,7 +14,7 @@
 					<input type="password" class="login-input" placeholder="Пароль">
 					<div class="login-buttons">	
 						<input type="submit" value="Войти">
-						<a href=# class="log-in-cancel" id="login-cancel-button"  onclick="">
+						<a href=# class="log-in-cancel" id="login-cancel-button">
 							Отмена
 						</a>
 					</div>
@@ -25,7 +25,7 @@
 		<span class="page-label">
 			LOREM IPSUM NEWS
 		</span>
-		<a href="#" class="log-in" id="login-button" onclick="">
+		<a href="#" class="log-in" id="login-button">
 			Войти
 		</a>
 		<header class="b-page-header">
