--- a/homework/hw_1/news.html
+++ b/homework/hw_1/news.html
@@ -21,7 +21,7 @@
 		</div>
 		<nav class="b-page-navigation">
 			<ul class="navigation-items">
-				<li class="navigation-item active"><a href="#">Интернет</a></li>
+				<li class="navigation-item active"><strong>Интернет</strong></li>
 				<li class="navigation-item"><a href="#">Наука и техника</a></li>
 				<li class="navigation-item"><a href="#">ТВ и радио</a></li>
 				<li class="navigation-item"><a href="#">Культура</a></li>
