added files for less. include files

--- a/homework/hw_1/news.html
+++ b/homework/hw_1/news.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>LOREM IPSUM NEWS</title>
 	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
+	<link rel="stylesheet/less" type="text/css" href="less/all.less" />
+	<script type="text/javascript" src="js/less-1.4.0-beta.min.js"></script>	
 	<link rel="stylesheet" type="text/css" href="styles/test.css">
 </head>
 <body>
