added mixin font-face disabel test.css

--- a/homework/hw_1/news.html
+++ b/homework/hw_1/news.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
 	<link rel="stylesheet/less" type="text/css" href="less/all.less" />
 	<script type="text/javascript" src="js/less-1.4.0-beta.min.js"></script>	
-	<link rel="stylesheet" type="text/css" href="styles/test.css">
+	<!--link rel="stylesheet" type="text/css" href="styles/test.css"-->
 </head>
 <body>
 	<div class="b-page-wrapper" id="b-page-wrapper">
