reorganize layout for adaptive layout

--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="initial-scale=1.0, width=device-width" />
 	<title>LOREM IPSUM NEWS</title>
 	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
 	<link rel="stylesheet/less" type="text/css" href="less/all.less" />
@@ -10,19 +11,19 @@
 </head>
 <body>
 	<div class="b-login-layer" id="b-login">
-			<div class="login-window">
-				<form action="#" id="login-form">
-					<input type="text" class="login-input" placeholder="Логин">
-					<input type="password" class="login-input" placeholder="Пароль">
-					<div class="login-buttons">	
-						<input type="submit" value="Войти">
-						<a href=# class="log-in-cancel" id="login-cancel-button">
-							Отмена
-						</a>
-					</div>
-				</form>
-			</div>
+		<div class="login-window">
+			<form action="#" id="login-form">
+				<input type="text" class="login-input" placeholder="Логин">
+				<input type="password" class="login-input" placeholder="Пароль">
+				<div class="login-buttons">	
+					<input type="submit" value="Войти">
+					<a href=# class="log-in-cancel" id="login-cancel-button">
+						Отмена
+					</a>
+				</div>
+			</form>
 		</div>
+	</div>
 	<div class="b-page-wrapper" id="b-page-wrapper">
 		<span class="page-label">
 			LOREM IPSUM NEWS
