include jquery library

--- a/homework/hw_1/index.html
+++ b/homework/hw_1/index.html
@@ -6,6 +6,7 @@
 	<title>LOREM IPSUM NEWS</title>
 	<link rel="stylesheet" type="text/css" href="styles/normalize.css">
 	<link rel="stylesheet/less" type="text/css" href="less/all.less" />
+	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="js/less-1.4.0-beta.min.js"></script>	
 	<!--link rel="stylesheet" type="text/css" href="styles/test.css"-->
 </head>
