added comment item

--- a/homework/hw_1/news.html
+++ b/homework/hw_1/news.html
@@ -56,7 +56,7 @@
 				</div>
 			</article>
 			<section class="news-comments">
-				<div class="news-comment-content">
+				<div class="news-comments-content">
 					<header class="news-comment-header">Комментарии(10)</header>
 					<div class="form-wrapper">
 						<form action="comment/publish" class="comment-form">
@@ -70,6 +70,17 @@
 								<input type="submit" value="Добавить комментарий"/>
 							</div>
 						</form>
+					</div>
+					<div class="news-comment-item">
+						<header class="comment-item-header">
+							<span class="comment-user-name">Константин Константинопольский</span>
+							<span class="comment-date">0:44, четверг, 24.05.2013</span>
+						</header>
+
+						<div class="comment-text">
+							Шило на мыло меняют- клан меняют свою шкуру и все- Патриарх Никон.: «Ибо совершивший грех есть раб греха , хотя бы имел тысячи корон на свей голове, но кто поступает праведно, тот больше самого царя, хотя бы он был последний из всех».
+						</div>
+						<a href="#" class="comment-answer">Ответить</a>
 					</div>
 				</div>
 			</section>
