added validation form and error massage

--- a/homework/hw_1/news.html
+++ b/homework/hw_1/news.html
@@ -67,20 +67,41 @@
 								<textarea name="comment" id="" placeholder="Введите текст сообщения..." ></textarea>
 							</div>
 							<div class="form-row clearfix">
+								<span class="form-error-message">Пожалуйста, заполните все поля перед отправкой</span>
 								<input type="submit" value="Добавить комментарий"/>
 							</div>
 						</form>
 					</div>
 					<div class="news-comment-item">
-						<header class="comment-item-header">
-							<span class="comment-user-name">Константин Константинопольский</span>
-							<span class="comment-date">0:44, четверг, 24.05.2013</span>
-						</header>
+						<div class="news-comment-item-body">
+							<header class="comment-item-header">
+								<span class="comment-user-name">Константин Константинопольский</span>
+								<span class="comment-date">0:44, четверг, 24.05.2013</span>
+							</header>
 
-						<div class="comment-text">
-							Шило на мыло меняют- клан меняют свою шкуру и все- Патриарх Никон.: «Ибо совершивший грех есть раб греха , хотя бы имел тысячи корон на свей голове, но кто поступает праведно, тот больше самого царя, хотя бы он был последний из всех».
+							<div class="comment-text">
+								Шило на мыло меняют- клан меняют свою шкуру и все- Патриарх Никон.: «Ибо совершивший грех есть раб греха , хотя бы имел тысячи корон на свей голове, но кто поступает праведно, тот больше самого царя, хотя бы он был последний из всех».
+							</div>
+							<a href="#" class="comment-answer">Ответить</a>
 						</div>
-						<a href="#" class="comment-answer">Ответить</a>
+						<div class="news-comment-item-answers">
+							<div class="news-comment-item">
+								<div class="news-comment-item-body">
+									<header class="comment-item-header">
+										<span class="comment-user-name">Константин Константинопольский</span>
+										<span class="comment-date">0:44, четверг, 24.05.2013</span>
+									</header>
+
+									<div class="comment-text">
+										Шило на мыло меняют- клан меняют свою шкуру и все- Патриарх Никон.: «Ибо совершивший грех есть раб греха , хотя бы имел тысячи корон на свей голове, но кто поступает праведно, тот больше самого царя, хотя бы он был последний из всех».
+									</div>
+									<a href="#" class="comment-answer">Ответить</a>
+								</div>
+								<div class="news-comment-item-answers">
+									
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -112,6 +133,7 @@
 				© ЗАО «Лорем ипсум ньюс»
 			</p>
 		</footer>
-	</div>	
+	</div>
+	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
