--- a/homework/hw_1/news.html
+++ b/homework/hw_1/news.html
@@ -103,6 +103,23 @@
 							</div>
 						</div>
 					</div>
+					<div class="news-comment-item">
+								<div class="news-comment-item-body">
+									<header class="comment-item-header">
+										<span class="comment-user-name">Иван Васильев</span>
+										<span class="comment-date">21:37, четверг, 23.05.2013</span>
+									</header>
+
+									<div class="comment-text">
+										> хотели бы пригласить его в гости, чтобы пообщаться и обнять его.
+										Слишком толсто.
+									</div>
+									<a href="#" class="comment-answer">Ответить</a>
+								</div>
+								<div class="news-comment-item-answers">
+									
+								</div>
+							</div>
 				</div>
 			</section>
 			<section class="other-news clearfix">
