--- a/computer_graphics/2.html
+++ b/computer_graphics/2.html
@@ -99,7 +99,6 @@
 			gl.viewport(0, 0, window.innerWidth, window.innerHeight);
 
 
-// Инициализация шейдеров
 			var vertexShader = gl.createShader(gl.VERTEX_SHADER);
 			gl.shaderSource(vertexShader, document.getElementById('vertexShader').text);
 			gl.compileShader(vertexShader);
@@ -125,121 +124,18 @@
 				console.log('Could not initialize shaders');
 			}
 
-// Получим местоположение переменных в программе шейдеров
 			var uCube = gl.getUniformLocation(program, 'u_cube');
 			var uCamera = gl.getUniformLocation(program, 'u_camera');
 			var aPosition = gl.getAttribLocation(program, 'a_position');
 			var aColor = gl.getAttribLocation(program, 'a_color');
 
 			var vertexBuffer = gl.createBuffer();
-			var vertices = [
-				// Передняя грань
-				-1, -1, -1,
-				1, -1, -1,
-				-1, -1, 1,
-
-				1, -1, 1,
-				-1, -1, 1,
-				1, -1, -1,
-
-				// Задняя грань
-				-1, 1, -1,
-				-1, 1, 1,
-				1, 1, -1,
-
-				1, 1, 1,
-				1, 1, -1,
-				-1, 1, 1,
-
-				// Нижняя грань
-				-1, -1, -1,
-				-1, 1, -1,
-				1, -1, -1,
-
-				1, 1, -1,
-				1, -1, -1,
-				-1, 1, -1,
-
-				// Верхняя грань
-				-1, -1, 1,
-				1, -1, 1,
-				-1, 1, 1,
-
-				1, 1, 1,
-				-1, 1, 1,
-				1, -1, 1,
-
-				// Левая грань
-				-1, -1, -1,
-				-1, -1, 1,
-				-1, 1, -1,
-
-				-1, 1, 1,
-				-1, 1, -1,
-				-1, -1, 1,
-
-				// Правая грань
-				1, -1, -1,
-				1, 1, -1,
-				1, -1, 1,
-
-				1, 1, 1,
-				1, -1, 1,
-				1, 1, -1
-			];
+			var vertices = [-1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, 1, 1, -1, 1, -1, 1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, 1, 1, 1, -1, 1, 1, 1, -1];
 			gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer);
 			gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
 
 			var colorBuffer = gl.createBuffer();
-			var colors = [
-				// Передняя грань
-				1, 0.5, 0.5,
-				1, 0.5, 0.5,
-				1, 0.5, 0.5,
-				1, 0.5, 0.5,
-				1, 0.5, 0.5,
-				1, 0.5, 0.5,
-
-				// Задняя грань
-				1, 0.5, 0.5,
-				1, 0.5, 0.5,
-				1, 0.5, 0.5,
-				1, 0.5, 0.5,
-				1, 0.5, 0.5,
-				1, 0.5, 0.5,
-
-				// Нижняя грань
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-
-				// Верхняя грань
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-
-				// Левая грань
-				0.3, 1, 0.3,
-				0.3, 1, 0.3,
-				0.3, 1, 0.3,
-				0.3, 1, 0.3,
-				0.3, 1, 0.3,
-				0.3, 1, 0.3,
-
-				// right face
-				0.3, 1, 0.3,
-				0.3, 1, 0.3,
-				0.3, 1, 0.3,
-				0.3, 1, 0.3,
-				0.3, 1, 0.3,
-				0.3, 1, 0.3
-			];
+			var colors = [1, 0.5, 0.5, 1, 0.5, 0.5, 1, 0.5, 0.5, 1, 0.5, 0.5, 1, 0.5, 0.5, 1, 0.5, 0.5, 1, 0.5, 0.5, 1, 0.5, 0.5, 1, 0.5, 0.5, 1, 0.5, 0.5, 1, 0.5, 0.5, 1, 0.5, 0.5, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.3, 1, 0.3, 0.3, 1, 0.3, 0.3, 1, 0.3, 0.3, 1, 0.3, 0.3, 1, 0.3, 0.3, 1, 0.3, 0.3, 1, 0.3, 0.3, 1, 0.3, 0.3, 1, 0.3, 0.3, 1, 0.3, 0.3, 1, 0.3, 0.3, 1, 0.3];
 			gl.bindBuffer(gl.ARRAY_BUFFER, colorBuffer);
 			gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(colors), gl.STATIC_DRAW);
 
@@ -254,22 +150,17 @@
 			var lastRenderTime = Date.now();
 
 			function render() {
-				// Запрашиваем рендеринг на следующий кадр
 				requestAnimationFrame(render);
 
-				// Получаем время прошедшее с прошлого кадра
 				var time = Date.now();
 				var dt = lastRenderTime - time;
 
-				// Вращаем куб относительно оси Y
 				mat4.rotateY(cubeMatrix, cubeMatrix, dt / 1000);
 				mat4.rotateZ(cubeMatrix, cubeMatrix, dt / 1000);
 
-				// Очищаем сцену, закрашивая её в белый цвет
 				gl.clearColor(1.0, 1.0, 1.0, 1.0);
 				gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
-				// Включаем фильтр глубины
 				gl.enable(gl.DEPTH_TEST);
 
 				gl.useProgram(program);
