--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Olgenn</title>
+	<title>Frontend-developer Oleg Vavilov</title>
+
+	<link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
+	<section class="b-cover-section">
+		<div class="content-size">
+			<div class="cover-section-avatar">
+				<img src="" alt=""/>
+			</div>
+		</div>
+	</section>
 
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
