--- a/computer_graphics/1.html
+++ b/computer_graphics/1.html
@@ -132,114 +132,12 @@
 			var aColor = gl.getAttribLocation(program, 'a_color');
 
 			var vertexBuffer = gl.createBuffer();
-			var vertices = [
-				// Передняя грань
-				-1, -1, -1,
-				1, -1, -1,
-				-1, -1, 1,
-
-				1, -1, 1,
-				-1, -1, 1,
-				1, -1, -1,
-
-				// Задняя грань
-				-1, 1, -1,
-				-1, 1, 1,
-				1, 1, -1,
-
-				1, 1, 1,
-				1, 1, -1,
-				-1, 1, 1,
-
-				// Нижняя грань
-				-1, -1, -1,
-				-1, 1, -1,
-				1, -1, -1,
-
-				1, 1, -1,
-				1, -1, -1,
-				-1, 1, -1,
-
-				// Верхняя грань
-				-1, -1, 1,
-				1, -1, 1,
-				-1, 1, 1,
-
-				1, 1, 1,
-				-1, 1, 1,
-				1, -1, 1,
-
-				// Левая грань
-				-1, -1, -1,
-				-1, -1, 1,
-				-1, 1, -1,
-
-				-1, 1, 1,
-				-1, 1, -1,
-				-1, -1, 1,
-
-				// Правая грань
-				1, -1, -1,
-				1, 1, -1,
-				1, -1, 1,
-
-				1, 1, 1,
-				1, -1, 1,
-				1, 1, -1
-			];
+			var vertices = [-1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, 1, 1, -1, 1, -1, 1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, 1, 1, 1, -1, 1, 1, 1, -1];
 			gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer);
 			gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
 
 			var colorBuffer = gl.createBuffer();
-			var colors = [
-				// Передняя грань
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-
-				// Задняя грань
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-
-				// Нижняя грань
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-
-				// Верхняя грань
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-				0.5, 0.7, 1,
-
-				// Левая грань
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-
-				// right face
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-				1, 1, 1,
-			];
+			var colors = [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 0.5, 0.7, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,];
 			gl.bindBuffer(gl.ARRAY_BUFFER, colorBuffer);
 			gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(colors), gl.STATIC_DRAW);
 
@@ -260,10 +158,6 @@
 				// Получаем время прошедшее с прошлого кадра
 				var time = Date.now();
 				var dt = lastRenderTime - time;
-
-				// Вращаем куб относительно оси Y
-//				mat4.rotateY(cubeMatrix, cubeMatrix, dt / 1000);
-//				mat4.rotateZ(cubeMatrix, cubeMatrix, dt / 1000);
 
 				// Очищаем сцену, закрашивая её в белый цвет
 				gl.clearColor(1.0, 1.0, 1.0, 1.0);
