Complete first section

--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!doctype html>
 <html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<title>Frontend-developer Oleg Vavilov</title>
+    <meta charset="UTF-8">
+    <title>Oleg Vavilov Frontend developer</title>
 
-	<link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
-	<section class="b-cover-section">
-		<div class="content-size">
-			<div class="cover-section-avatar">
-				<img src="" alt=""/>
-			</div>
-		</div>
-	</section>
+    <section class="b-cover-section">
+        <div class="content-size">
+            <div class="cover-section-avatar">
+                <img src="" alt=""/>
+            </div>
 
-	<script type="text/javascript" src="js/main.js"></script>
+            <h1 class="cover-section-caption">Олег Вавилов<br/>Frontend Developer</h1>
+
+            <div class="cover-section-button">
+                <a href="#" class="b-btn _white">Написать мне</a>
+            </div>
+
+            <div class="cover-section-arrow"></div>
+        </div>
+    </section>
+
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
