--- a/index.html
+++ b/index.html
@@ -23,6 +23,55 @@
         </div>
     </section>
 
+    <section class="b-about-section">
+        <div class="content-size">
+            <div class="about-caption">Обо мне</div>
+            <div class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia </div>
+        </div>
+    </section>
+
+    <section class="b-portfolio-section">
+        <div class="content-size">
+            <div class="portfolio-caption">Последние работы</div>
+
+            <ul class="portfolio-list">
+                <li class="portfolio-list-item">
+                    <a class="portfolio-list-item-link" href="#"></a>
+                </li>
+
+                <li class="portfolio-list-item">
+                    <a class="portfolio-list-item-link" href="#"></a>
+                </li>
+
+                <li class="portfolio-list-item">
+                    <a class="portfolio-list-item-link" href="#"></a>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="b-clients-section">
+        <div class="content-size">
+            <div class="clients-caption">Клиенты</div>
+
+            <ul class="clients-list">
+                <li class="clients-list-item"><a href="#"></a></li>
+                <li class="clients-list-item"><a href="#"></a></li>
+                <li class="clients-list-item"><a href="#"></a></li>
+            </ul>
+        </div>
+    </section>
+
+    <footer class="b-footer">
+        <div class="content-size">
+            <div class="footer-caption">
+                Нужен Frontend-разработчик? <strong>Готов к работе!</strong>
+            </div>
+
+            <a href="#" class="b-btn _white">Написать мне</a>
+        </div>
+    </footer>
+
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
